DTRDVOPS-1265 Add sourceIp to exposed metrics

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: false
-        tags: opstree/druid-exporter:latest
+        tags: dataroid/druid-exporter:latest
